kustomize/overlays/prod/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csw-deployment
spec:
  template:
    spec:
      containers:
        - name: csw
          imagePullPolicy: IfNotPresent
