kustomize/overlays/prod/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: csw-clusterip
spec:
  type: ClusterIP
  selector:
    app: csw-deployment
    variant: prod
